[gd_scene load_steps=4 format=3 uid="uid://dq35a1lg6jvk8"]

[ext_resource type="Script" uid="uid://d2vhxfiag4n44" path="res://script/forward_timing.gd" id="1_0vecy"]
[ext_resource type="Theme" uid="uid://irahf0p4ps7c" path="res://assets/主題/theme.tres" id="2_0vecy"]
[ext_resource type="Theme" uid="uid://dtttrpww2gsfn" path="res://assets/主題/exit_button.tres" id="3_0vecy"]

[node name="forward timing" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 253.0
offset_bottom = 228.0
size_flags_horizontal = 0
script = ExtResource("1_0vecy")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = -2.0
offset_right = 215.0
offset_bottom = 226.0
theme = ExtResource("2_0vecy")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 45

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "正向計時"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.682353, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "00:00"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 21
text = "開始"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "重置"

[node name="TimerNode" type="Timer" parent="."]

[node name="exit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 81.0
offset_right = 207.0
offset_bottom = 119.0
theme = ExtResource("3_0vecy")
flat = true

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="timeout" from="TimerNode" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
